# rust-mhcat

./: Cargo.toml  README.md  crowdin.yml
locales/: en.yml  zh-CN.yml
src/: main.rs
src/commands/: locales.rs  mod.rs
src/handler/: bot_ready.rs  interaction.rs  mod.rs
src/utils/: mod.rs  slash_command_locales.rs
