[package]
name = "mhcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rust-i18n = "3.0.1"
serde = "1.0.199"
serenity = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.12"
